[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git_workbench"
version = "1.0.0"
description = "A comprehensive Git & GitHub assistant"
authors = [
  {name = "Rohan K R", email = "rohanroni2019@gmail.com"},
]
maintainers = [
  {name = "Rohan K R", email = "rohanroni2019@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["git", "cli", "productivity", "terminal", "rich", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "inquirer>=3.1.0",
    "gitpython>=3.1.0",
    "pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Rohan7654/git_workbench"
Repository = "https://github.com/Rohan7654/git_workbench"
Issues = "https://github.com/Rohan7654/git_workbench/issues"
Documentation = "https://github.com/Rohan7654/git_workbench#readme"

[project.scripts]
git_workbench = "git_workbench.main:cli"
gw = "git_workbench.main:cli"
